Update to paper content

--- a/notebooks/03_DistributedClusterFinder.ipynb
+++ b/notebooks/03_DistributedClusterFinder.ipynb
@@ -24,7 +24,7 @@
     "\n",
     "from furax._base.core import HomothetyOperator\n",
     "from furax.landscapes import StokesPyTree\n",
-    "from functools import partial\n",
+    "from functools import partialm\n",
     "import matplotlib.pyplot as plt\n",
     "\n"
    ]
@@ -62,20 +62,16 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "from generate_maps import load_from_cache\n",
+    "\n",
     "nside = 64\n",
-    "npixel = 12 * nside**2\n",
-    "stokes_type = 'QU'\n",
-    "frequency_count = 15\n",
-    "nu = jnp.linspace(40.0, 402.0, frequency_count)\n",
+    "npixels = 12 * nside ** 2\n",
     "\n",
-    "comp_keys = jax.random.split(jax.random.PRNGKey(0), 3)\n",
-    "stokes_cls = StokesPyTree.class_for(stokes_type)\n",
+    "nu, freq_maps = load_from_cache(nside , sky=\"c1d1s1\")\n",
+    "print('freq_maps shape:', freq_maps.shape)\n",
     "\n",
-    "sky = {\n",
-    "    'cmb': stokes_cls.normal(comp_keys[0], (npixel,)),\n",
-    "    'dust': stokes_cls.normal(comp_keys[1], (npixel,)),\n",
-    "    'synchrotron': stokes_cls.normal(comp_keys[2], (npixel,)),\n",
-    "}"
+    "d = StokesPyTree.from_stokes(Q=freq_maps[:, 1, :], U=freq_maps[:, 2, :])\n",
+    "print(f\"Structure of D Matrix : {d.structure}\")"
    ]
   },
   {
@@ -105,6 +101,9 @@
     }
    ],
    "source": [
+    "from furax.comp_sep import get_cutout_from_mask , from_cutout_to_fullmap\n",
+    "\n",
+    "\n",
     "temp_dust_patches_count = 150\n",
     "beta_dust_patches_count = 100\n",
     "beta_pl_patches_count = 50\n",
@@ -138,17 +137,6 @@
     "    'beta_dust_patches': beta_dust_patch_indices,\n",
     "    'beta_pl_patches': beta_pl_patch_indices,\n",
     "}\n",
-    "\n",
-    "\n",
-    "\n",
-    "@jax.jit\n",
-    "def get_cutout_from_mask(ful_map, indices):\n",
-    "    return jnp.take(ful_map, indices)\n",
-    "\n",
-    "\n",
-    "@jax.jit\n",
-    "def from_cutout_to_fullmap(goodpix, indices, ful_map):\n",
-    "    return ful_map.at[indices].set(goodpix)\n",
     "\n",
     "\n",
     "(indices, ) = jnp.where(GAL020 == 1)\n",
@@ -187,8 +175,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from generate_maps import simulate_D_from_params\n",
-    "\n",
     "dust_nu0 = 150.0\n",
     "synchrotron_nu0 = 20.0\n",
     "\n",
@@ -203,15 +189,6 @@
     "                                    dust_nu0=dust_nu0,\n",
     "                                    synchrotron_nu0=synchrotron_nu0)\n",
     "\n",
-    "d = simulate_D_from_params(\n",
-    "    params,\n",
-    "    masked_clusters,\n",
-    "    nu,\n",
-    "    masked_sky,\n",
-    "    stokes_type,\n",
-    "    dust_nu0=dust_nu0,\n",
-    "    synchrotron_nu0=synchrotron_nu0,\n",
-    ")\n",
     "\n",
     "N = HomothetyOperator(jnp.ones(1), _in_structure=d.structure)"
    ]
@@ -251,9 +228,9 @@
     "    beta_pl_patch_indices = get_clusters(planck_mask, indices,B_s_patches, jax.random.PRNGKey(0),max_centroids=max_patches)\n",
     "\n",
     "    params = {\n",
-    "        'temp_dust': jnp.linspace(15.0, 22.0, max_patches),\n",
-    "        'beta_dust': jnp.linspace(1.5, 2.5, max_patches),\n",
-    "        'beta_pl': jnp.linspace(-3.0, -2.0, max_patches),\n",
+    "    'temp_dust': jnp.full((max_patches,), 20.0),\n",
+    "    'beta_dust': jnp.full((max_patches,), 1.54),\n",
+    "    'beta_pl': jnp.full((max_patches,), -3.0),\n",
     "    }\n",
     "\n",
     "    patch_indices = {\n",
@@ -270,7 +247,7 @@
     "            params,\n",
     "            negative_log_likelihood,\n",
     "            solver,\n",
-    "            max_iter=500,\n",
+    "            max_iter=1000,\n",
     "            tol=1e-8,\n",
     "            verbose=False,\n",
     "            nu=nu,\n",
