--- a/notebooks/03_DistributedClusterFinder.ipynb
+++ b/notebooks/03_DistributedClusterFinder.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -29,8 +29,7 @@
     ")\n",
     "from furax.obs.stokes import Stokes\n",
     "from jax_grid_search import optimize\n",
-    "from jax_healpy import get_clusters\n",
-    "\n"
+    "from jax_healpy import get_clusters"
    ]
   },
   {
@@ -100,7 +99,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -117,10 +116,10 @@
    "source": [
     "from jax_healpy import from_cutout_to_fullmap, get_cutout_from_mask\n",
     "\n",
-    "temp_dust_patches_count = 150\n",
-    "beta_dust_patches_count = 100\n",
+    "temp_dust_patches_count = 50\n",
+    "beta_dust_patches_count = 2000\n",
     "beta_pl_patches_count = 50\n",
-    "max_centroids = 300\n",
+    "max_centroids = 2000\n",
     "indices, = jnp.where(GAL020 == 1)\n",
     "\n",
     "temp_dust_patch_indices = get_clusters(GAL020,\n",
@@ -140,10 +139,10 @@
     "                                     max_centroids=max_centroids)\n",
     "\n",
     "params = {\n",
-    "    'temp_dust': jnp.linspace(10.0, 30.0, temp_dust_patches_count),\n",
-    "    'beta_dust': jnp.linspace(1.5, 2.5, beta_dust_patches_count),\n",
-    "    'beta_pl': jnp.linspace(-3.0, -2.0, beta_pl_patches_count),\n",
-    "}\n",
+    "            \"beta_dust\": jnp.full((temp_dust_patches_count,), 1.54),\n",
+    "            \"temp_dust\": jnp.full((max_centroids,), 20.0),\n",
+    "            \"beta_pl\": jnp.full((beta_pl_patches_count,), (-3.0)),\n",
+    "        }\n",
     "\n",
     "patch_indices = {\n",
     "    'temp_dust_patches': temp_dust_patch_indices,\n",
@@ -265,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -277,7 +276,7 @@
     "\n",
     "solver = optax.lbfgs()\n",
     "\n",
-    "inverser_options = {'solver': lx.CG(rtol=1e-6, atol=1e-6, max_steps=100000), 'solver_throw': False}\n",
+    "inverser_options = {'solver': lx.CG(rtol=1e-6 , atol=1e-6, max_steps=100000), 'solver_throw': False}\n",
     "\n",
     "\n",
     "(indices,) = jnp.where(GAL020 == 1)\n",
@@ -321,8 +320,6 @@
     "            d=masked_sky,\n",
     "            patch_indices=masked_clusters,\n",
     "        )\n",
-    "\n",
-    "\n",
     "\n",
     "\n",
     "    last_L = negative_log_likelihood(final_params, nu=nu, d=masked_sky, N=masked_noise, patch_indices=masked_clusters)\n",
@@ -395,9 +392,9 @@
     "\n",
     "# Put the good values for the grid search\n",
     "search_space = {\n",
-    "    'T_d_patches': jnp.arange(10, 300, 140),\n",
-    "    'B_d_patches': jnp.arange(10, 300, 140),\n",
-    "    'B_s_patches': jnp.arange(10, 300, 140),\n",
+    "    'T_d_patches': jax.array([50]),\n",
+    "    'B_d_patches': jax.array([1500 , 2000]),\n",
+    "    'B_s_patches': jax.array([50]),\n",
     "}\n",
     "\n",
     "grid_search = DistributedGridSearch(\n",
