ruff format and check

--- a/notebooks/00_fgbuster_vs_furax.ipynb
+++ b/notebooks/00_fgbuster_vs_furax.ipynb
@@ -101,7 +101,7 @@
     "\n",
     "nu, freq_maps = load_from_cache(nside)\n",
     "# Check the shape of freq_maps\n",
-    "print('freq_maps shape:', freq_maps.shape)"
+    "print(\"freq_maps shape:\", freq_maps.shape)"
    ]
   },
   {
@@ -142,7 +142,7 @@
    "source": [
     "dust_nu0 = 150.0\n",
     "synchrotron_nu0 = 20.0\n",
-    "instrument = get_instrument('LiteBIRD')\n",
+    "instrument = get_instrument(\"LiteBIRD\")\n",
     "components = [CMB(), Dust(dust_nu0), Synchrotron(synchrotron_nu0)]"
    ]
   },
@@ -183,7 +183,7 @@
     "DND = invN(d) @ d\n",
     "\n",
     "in_structure = d.structure_for((d.shape[1],))\n",
-    "best_params = {'temp_dust': 20.0, 'beta_dust': 1.54, 'beta_pl': -3.0}\n",
+    "best_params = {\"temp_dust\": 20.0, \"beta_dust\": 1.54, \"beta_pl\": -3.0}\n",
     "\n",
     "dust_nu0 = 150.0\n",
     "synchrotron_nu0 = 20.0\n",
@@ -195,12 +195,15 @@
     "    dust = DustOperator(\n",
     "        nu,\n",
     "        frequency0=dust_nu0,\n",
-    "        temperature=params['temp_dust'],\n",
-    "        beta=params['beta_dust'],\n",
+    "        temperature=params[\"temp_dust\"],\n",
+    "        beta=params[\"beta_dust\"],\n",
     "        in_structure=in_structure,\n",
     "    )\n",
     "    synchrotron = SynchrotronOperator(\n",
-    "        nu, frequency0=synchrotron_nu0, beta_pl=params['beta_pl'], in_structure=in_structure\n",
+    "        nu,\n",
+    "        frequency0=synchrotron_nu0,\n",
+    "        beta_pl=params[\"beta_pl\"],\n",
+    "        in_structure=in_structure,\n",
     "    )\n",
     "\n",
     "    A = MixingMatrixOperator(cmb=cmb, dust=dust, synchrotron=synchrotron)\n",
@@ -236,11 +239,11 @@
     }
    ],
    "source": [
-    "print('Performance of the nll evaluation')\n",
+    "print(\"Performance of the nll evaluation\")\n",
     "negative_log_prob(best_params, d).block_until_ready()\n",
     "%timeit negative_log_prob(best_params, d).block_until_ready()\n",
-    "print('Performance of the nll grad evaluation')\n",
-    "jax.grad(negative_log_prob)(best_params, d)['beta_pl'].block_until_ready()\n",
+    "print(\"Performance of the nll grad evaluation\")\n",
+    "jax.grad(negative_log_prob)(best_params, d)[\"beta_pl\"].block_until_ready()\n",
     "%timeit jax.grad(negative_log_prob)(best_params, d)['beta_pl'].block_until_ready()"
    ]
   },
@@ -273,12 +276,14 @@
     }
    ],
    "source": [
-    "wrong_params = jax.tree.map(lambda x: x + jax.random.normal(jax.random.PRNGKey(0)), best_params)\n",
-    "print(\n",
-    "    f'Wrong parameters grad {jax.tree.reduce(max , jax.grad(negative_log_prob)(wrong_params, d))}'\n",
+    "wrong_params = jax.tree.map(\n",
+    "    lambda x: x + jax.random.normal(jax.random.PRNGKey(0)), best_params\n",
     ")\n",
     "print(\n",
-    "    f'Correct parameters grad {jax.tree.reduce(max , jax.grad(negative_log_prob)(best_params, d))}'\n",
+    "    f\"Wrong parameters grad {jax.tree.reduce(max, jax.grad(negative_log_prob)(wrong_params, d))}\"\n",
+    ")\n",
+    "print(\n",
+    "    f\"Correct parameters grad {jax.tree.reduce(max, jax.grad(negative_log_prob)(best_params, d))}\"\n",
     ")"
    ]
   },
@@ -305,7 +310,9 @@
     "L = negative_log_likelihood(best_params, nu=nu, N=invN, d=d)\n",
     "\n",
     "assert jax.tree.all(\n",
-    "    jax.tree.map(lambda x, y: jnp.isclose(x, y, rtol=1e-5), L, negative_log_prob(best_params, d))\n",
+    "    jax.tree.map(\n",
+    "        lambda x, y: jnp.isclose(x, y, rtol=1e-5), L, negative_log_prob(best_params, d)\n",
+    "    )\n",
     ")"
    ]
   },
@@ -377,9 +384,11 @@
     }
    ],
    "source": [
-    "best_params = {'temp_dust': 20.0, 'beta_dust': 1.54, 'beta_pl': -3.0}\n",
+    "best_params = {\"temp_dust\": 20.0, \"beta_dust\": 1.54, \"beta_pl\": -3.0}\n",
     "\n",
-    "scipy_solver = jaxopt.ScipyMinimize(fun=negative_log_likelihood, method='TNC', jit=True, tol=1e-10)\n",
+    "scipy_solver = jaxopt.ScipyMinimize(\n",
+    "    fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10\n",
+    ")\n",
     "result = scipy_solver.run(best_params, nu=nu, N=invN, d=d)\n",
     "result.params"
    ]
@@ -475,9 +484,11 @@
     }
    ],
    "source": [
-    "params = {'temp_dust': 20.0, 'beta_dust': 2.54, 'beta_pl': -3.0}\n",
+    "params = {\"temp_dust\": 20.0, \"beta_dust\": 2.54, \"beta_pl\": -3.0}\n",
     "\n",
-    "scipy_solver = jaxopt.ScipyMinimize(fun=negative_log_likelihood, method='TNC', jit=True, tol=1e-10)\n",
+    "scipy_solver = jaxopt.ScipyMinimize(\n",
+    "    fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10\n",
+    ")\n",
     "result = scipy_solver.run(params, nu=nu, N=invN, d=d)\n",
     "result.params"
    ]
@@ -573,9 +584,11 @@
     }
    ],
    "source": [
-    "params = {'temp_dust': 20.0, 'beta_dust': 2.54, 'beta_pl': -6.0}\n",
+    "params = {\"temp_dust\": 20.0, \"beta_dust\": 2.54, \"beta_pl\": -6.0}\n",
     "\n",
-    "scipy_solver = jaxopt.ScipyMinimize(fun=negative_log_likelihood, method='TNC', jit=True, tol=1e-10)\n",
+    "scipy_solver = jaxopt.ScipyMinimize(\n",
+    "    fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10\n",
+    ")\n",
     "result = scipy_solver.run(params, nu=nu, N=invN, d=d)\n",
     "result.params"
    ]
@@ -637,9 +650,11 @@
     }
    ],
    "source": [
-    "params = {'temp_dust': 25.0, 'beta_dust': 2.54, 'beta_pl': -6.0}\n",
+    "params = {\"temp_dust\": 25.0, \"beta_dust\": 2.54, \"beta_pl\": -6.0}\n",
     "\n",
-    "scipy_solver = jaxopt.ScipyMinimize(fun=negative_log_likelihood, method='TNC', jit=True, tol=1e-10)\n",
+    "scipy_solver = jaxopt.ScipyMinimize(\n",
+    "    fun=negative_log_likelihood, method=\"TNC\", jit=True, tol=1e-10\n",
+    ")\n",
     "result = scipy_solver.run(params, nu=nu, N=invN, d=d)\n",
     "result.params"
    ]
@@ -686,7 +701,7 @@
     "print(\n",
     "    f\"Final parameters: {final_params}, number of evaluations: {otu.tree_get(final_state, 'count')}\"\n",
     ")\n",
-    "print(f'Initial Value: {negative_log_prob(final_params , d=d)}')"
+    "print(f\"Initial Value: {negative_log_prob(final_params, d=d)}\")"
    ]
   }
  ],
