--- a/notebooks/02_ValidationModel.ipynb
+++ b/notebooks/02_ValidationModel.ipynb
@@ -11,28 +11,27 @@
     "import os\n",
     "\n",
     "os.environ[\"EQX_ON_ERROR\"] = \"nan\"\n",
-    "import argparse\n",
     "from functools import partial\n",
     "\n",
-    "import healpy as hp\n",
     "import jax\n",
     "import jax.numpy as jnp\n",
     "import lineax as lx\n",
-    "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "import optax\n",
     "from furax import Config, HomothetyOperator\n",
-    "from furax._instruments.sky import FGBusterInstrument , get_observation , get_noise_from_instrument\n",
+    "from furax._instruments.sky import (\n",
+    "    FGBusterInstrument,\n",
+    "    get_noise_from_instrument,\n",
+    "    get_observation,\n",
+    ")\n",
     "from furax.comp_sep import (\n",
     "    negative_log_likelihood,\n",
     "    spectral_cmb_variance,\n",
-    "    spectral_log_likelihood,\n",
     ")\n",
-    "from furax.obs.landscapes import HealpixLandscape, Stokes\n",
-    "from furax.obs.stokes import Stokes , StokesQU\n",
-    "from generate_maps import simulate_D_from_params , get_mixin_matrix_operator\n",
-    "from jax_grid_search import DistributedGridSearch, optimize\n",
-    "from jax_healpy import from_cutout_to_fullmap, get_clusters, get_cutout_from_mask\n"
+    "from furax.obs.landscapes import HealpixLandscape\n",
+    "from generate_maps import get_mixin_matrix_operator, simulate_D_from_params\n",
+    "from jax_grid_search import optimize\n",
+    "from jax_healpy import get_clusters, get_cutout_from_mask"
    ]
   },
   {
@@ -107,8 +106,7 @@
     "\n",
     "best_params_flat, tree_struct = jax.tree.flatten(best_params)\n",
     "best_params = jax.tree.map_with_path(\n",
-    "    lambda path, x: x\n",
-    "    + jax.random.normal(jax.random.key(path[0].idx), x.shape) * 0.2,\n",
+    "    lambda path, x: x + jax.random.normal(jax.random.key(path[0].idx), x.shape) * 0.2,\n",
     "    best_params_flat,\n",
     ")\n",
     "best_params = jax.tree.unflatten(tree_struct, best_params)"
@@ -173,9 +171,9 @@
     ")\n",
     "\n",
     "instrument = FGBusterInstrument.default_instrument()\n",
-    "pysm3_d = get_observation(instrument , 64  , stokes_type='QU' , tag='c1d0s0')\n",
+    "pysm3_d = get_observation(instrument, 64, stokes_type=\"QU\", tag=\"c1d0s0\")\n",
     "\n",
-    "masked_pysm3_d = get_cutout_from_mask(pysm3_d, indices , axis=1)\n",
+    "masked_pysm3_d = get_cutout_from_mask(pysm3_d, indices, axis=1)\n",
     "\n",
     "spectral_cmb_variance_fn = partial(\n",
     "    spectral_cmb_variance, dust_nu0=dust_nu0, synchrotron_nu0=synchrotron_nu0\n",
@@ -221,8 +219,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "noise = get_noise_from_instrument(instrument , 64 , stokes_type='QU')\n",
-    "masked_noise = get_cutout_from_mask(noise, indices , axis=1)\n",
+    "noise = get_noise_from_instrument(instrument, 64, stokes_type=\"QU\")\n",
+    "masked_noise = get_cutout_from_mask(noise, indices, axis=1)\n",
     "noised_d = masked_d + masked_noise * 0.1"
    ]
   },
@@ -243,7 +241,8 @@
     }
    ],
    "source": [
-    "A = get_mixin_matrix_operator(best_params,\n",
+    "A = get_mixin_matrix_operator(\n",
+    "    best_params,\n",
     "    masked_clusters,\n",
     "    nu,\n",
     "    masked_sky,\n",
@@ -251,19 +250,21 @@
     "    synchrotron_nu0=synchrotron_nu0,\n",
     ")\n",
     "\n",
+    "\n",
     "def allclose(x, y, rtol=1e-05, atol=1e-08, equal_nan=False) -> bool:\n",
-    "    return jax.tree.map(\n",
-    "            lambda x, y: ((x - y)**2).mean(), x, y\n",
-    "        )\n",
+    "    return jax.tree.map(lambda x, y: ((x - y) ** 2).mean(), x, y)\n",
     "    return jax.tree.all(\n",
     "        jax.tree.map(\n",
-    "            lambda x, y: jnp.allclose(x, y, rtol=rtol, atol=atol, equal_nan=equal_nan), x, y\n",
+    "            lambda x, y: jnp.allclose(x, y, rtol=rtol, atol=atol, equal_nan=equal_nan),\n",
+    "            x,\n",
+    "            y,\n",
     "        ),\n",
     "        True,\n",
     "    )\n",
     "\n",
+    "\n",
     "s = (A.T @ N.I @ A).I((A.T @ N.I)(noised_d))\n",
-    "jax.tree.reduce(max , allclose(s , masked_sky) , 0.0)"
+    "jax.tree.reduce(max, allclose(s, masked_sky), 0.0)"
    ]
   },
   {
@@ -273,6 +274,7 @@
    "outputs": [],
    "source": [
     "masked_d = masked_pysm3_d\n",
+    "\n",
     "\n",
     "@partial(jax.jit, static_argnums=(5))\n",
     "def compute_minimum_variance(\n",
@@ -329,11 +331,11 @@
     "\n",
     "    return {\n",
     "        \"value\": cmb_var,\n",
-    "        \"NLL\" : nll,\n",
+    "        \"NLL\": nll,\n",
     "        \"beta_dust\": final_params[\"beta_dust\"],\n",
     "        \"temp_dust\": final_params[\"temp_dust\"],\n",
     "        \"beta_pl\": final_params[\"beta_pl\"],\n",
-    "    }\n"
+    "    }"
    ]
   },
   {
@@ -381,8 +383,8 @@
     }
    ],
    "source": [
-    "bad_res = compute_minimum_variance(1 , 200 , 1 , GAL020 , indices , max_patches=200)\n",
-    "good_res = compute_minimum_variance(1 , 100 , 1 , GAL020 , indices , max_patches=200)"
+    "bad_res = compute_minimum_variance(1, 200, 1, GAL020, indices, max_patches=200)\n",
+    "good_res = compute_minimum_variance(1, 100, 1, GAL020, indices, max_patches=200)"
    ]
   },
   {
@@ -391,14 +393,26 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "bell = negative_log_likelihood_fn(best_params, nu=nu, N=N, d=noised_d, patch_indices=masked_clusters)\n",
-    "gll = negative_log_likelihood_fn(good_res, nu=nu, N=N, d=noised_d, patch_indices=masked_clusters)\n",
-    "bll = negative_log_likelihood_fn(bad_res, nu=nu, N=N, d=noised_d, patch_indices=masked_clusters)\n",
+    "bell = negative_log_likelihood_fn(\n",
+    "    best_params, nu=nu, N=N, d=noised_d, patch_indices=masked_clusters\n",
+    ")\n",
+    "gll = negative_log_likelihood_fn(\n",
+    "    good_res, nu=nu, N=N, d=noised_d, patch_indices=masked_clusters\n",
+    ")\n",
+    "bll = negative_log_likelihood_fn(\n",
+    "    bad_res, nu=nu, N=N, d=noised_d, patch_indices=masked_clusters\n",
+    ")\n",
     "\n",
     "\n",
-    "var_bell = spectral_cmb_variance_fn(best_params, nu=nu, d=noised_d, N=N, patch_indices=masked_clusters)\n",
-    "var_gll = spectral_cmb_variance_fn(good_res, nu=nu, d=noised_d, N=N, patch_indices=masked_clusters)\n",
-    "var_bll = spectral_cmb_variance_fn(bad_res, nu=nu, d=noised_d, N=N, patch_indices=masked_clusters)"
+    "var_bell = spectral_cmb_variance_fn(\n",
+    "    best_params, nu=nu, d=noised_d, N=N, patch_indices=masked_clusters\n",
+    ")\n",
+    "var_gll = spectral_cmb_variance_fn(\n",
+    "    good_res, nu=nu, d=noised_d, N=N, patch_indices=masked_clusters\n",
+    ")\n",
+    "var_bll = spectral_cmb_variance_fn(\n",
+    "    bad_res, nu=nu, d=noised_d, N=N, patch_indices=masked_clusters\n",
+    ")"
    ]
   },
   {
@@ -420,7 +434,7 @@
     }
    ],
    "source": [
-    "var_bell , var_gll , var_bll"
+    "var_bell, var_gll, var_bll"
    ]
   },
   {
@@ -451,7 +465,7 @@
     }
    ],
    "source": [
-    "gll > bell , gll < bll"
+    "gll > bell, gll < bll"
    ]
   },
   {
@@ -471,7 +485,7 @@
     }
    ],
    "source": [
-    "var_gll > var_bell , var_gll < var_bll"
+    "var_gll > var_bell, var_gll < var_bll"
    ]
   },
   {
@@ -511,7 +525,7 @@
     }
    ],
    "source": [
-    "good_res['value'] , bad_res['value']"
+    "good_res[\"value\"], bad_res[\"value\"]"
    ]
   },
   {
@@ -531,7 +545,7 @@
     }
    ],
    "source": [
-    "bad_res['value'] > good_res['value']"
+    "bad_res[\"value\"] > good_res[\"value\"]"
    ]
   }
  ],
