--- a/notebooks/03_DistributedClusterFinder.ipynb
+++ b/notebooks/03_DistributedClusterFinder.ipynb
@@ -46,9 +46,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "GAL020 = np.load('../data/masks/GAL_PlanckMasks_64.npz')['GAL020']\n",
-    "GAL040 = np.load('../data/masks/GAL_PlanckMasks_64.npz')['GAL040']\n",
-    "GAL060 = np.load('../data/masks/GAL_PlanckMasks_64.npz')['GAL060']"
+    "GAL020 = np.load(\"../data/masks/GAL_PlanckMasks_64.npz\")[\"GAL020\"]\n",
+    "GAL040 = np.load(\"../data/masks/GAL_PlanckMasks_64.npz\")[\"GAL040\"]\n",
+    "GAL060 = np.load(\"../data/masks/GAL_PlanckMasks_64.npz\")[\"GAL060\"]"
    ]
   },
   {
@@ -78,10 +78,10 @@
     "from generate_maps import load_from_cache\n",
     "\n",
     "nside = 64\n",
-    "npixels = 12 * nside ** 2\n",
+    "npixels = 12 * nside**2\n",
     "\n",
-    "nu, freq_maps = load_from_cache(nside , sky=\"c1d1s1\")\n",
-    "print('freq_maps shape:', freq_maps.shape)\n",
+    "nu, freq_maps = load_from_cache(nside, sky=\"c1d1s1\")\n",
+    "print(\"freq_maps shape:\", freq_maps.shape)\n",
     "\n",
     "d = Stokes.from_stokes(Q=freq_maps[:, 1, :], U=freq_maps[:, 2, :])\n",
     "print(f\"Structure of D Matrix : {d.structure}\")"
@@ -114,60 +114,66 @@
     }
    ],
    "source": [
-    "from jax_healpy import from_cutout_to_fullmap, get_cutout_from_mask\n",
+    "from jax_healpy import get_cutout_from_mask\n",
     "\n",
     "temp_dust_patches_count = 50\n",
     "beta_dust_patches_count = 2000\n",
     "beta_pl_patches_count = 50\n",
     "max_centroids = 2000\n",
-    "indices, = jnp.where(GAL020 == 1)\n",
+    "(indices,) = jnp.where(GAL020 == 1)\n",
     "\n",
-    "temp_dust_patch_indices = get_clusters(GAL020,\n",
-    "                                       indices,\n",
-    "                                       temp_dust_patches_count,\n",
-    "                                       jax.random.PRNGKey(0),\n",
-    "                                       max_centroids=max_centroids)\n",
-    "beta_dust_patch_indices = get_clusters(GAL020,\n",
-    "                                       indices,\n",
-    "                                       beta_dust_patches_count,\n",
-    "                                       jax.random.PRNGKey(0),\n",
-    "                                       max_centroids=max_centroids)\n",
-    "beta_pl_patch_indices = get_clusters(GAL020,\n",
-    "                                     indices,\n",
-    "                                     beta_pl_patches_count,\n",
-    "                                     jax.random.PRNGKey(0),\n",
-    "                                     max_centroids=max_centroids)\n",
+    "temp_dust_patch_indices = get_clusters(\n",
+    "    GAL020,\n",
+    "    indices,\n",
+    "    temp_dust_patches_count,\n",
+    "    jax.random.PRNGKey(0),\n",
+    "    max_centroids=max_centroids,\n",
+    ")\n",
+    "beta_dust_patch_indices = get_clusters(\n",
+    "    GAL020,\n",
+    "    indices,\n",
+    "    beta_dust_patches_count,\n",
+    "    jax.random.PRNGKey(0),\n",
+    "    max_centroids=max_centroids,\n",
+    ")\n",
+    "beta_pl_patch_indices = get_clusters(\n",
+    "    GAL020,\n",
+    "    indices,\n",
+    "    beta_pl_patches_count,\n",
+    "    jax.random.PRNGKey(0),\n",
+    "    max_centroids=max_centroids,\n",
+    ")\n",
     "\n",
     "params = {\n",
-    "            \"beta_dust\": jnp.full((temp_dust_patches_count,), 1.54),\n",
-    "            \"temp_dust\": jnp.full((max_centroids,), 20.0),\n",
-    "            \"beta_pl\": jnp.full((beta_pl_patches_count,), (-3.0)),\n",
-    "        }\n",
+    "    \"beta_dust\": jnp.full((temp_dust_patches_count,), 1.54),\n",
+    "    \"temp_dust\": jnp.full((max_centroids,), 20.0),\n",
+    "    \"beta_pl\": jnp.full((beta_pl_patches_count,), (-3.0)),\n",
+    "}\n",
     "\n",
     "patch_indices = {\n",
-    "    'temp_dust_patches': temp_dust_patch_indices,\n",
-    "    'beta_dust_patches': beta_dust_patch_indices,\n",
-    "    'beta_pl_patches': beta_pl_patch_indices,\n",
+    "    \"temp_dust_patches\": temp_dust_patch_indices,\n",
+    "    \"beta_dust_patches\": beta_dust_patch_indices,\n",
+    "    \"beta_pl_patches\": beta_pl_patch_indices,\n",
     "}\n",
     "\n",
     "\n",
-    "(indices, ) = jnp.where(GAL020 == 1)\n",
+    "(indices,) = jnp.where(GAL020 == 1)\n",
     "\n",
     "masked_sky = jax.tree.map(\n",
-    "    lambda full_map: get_cutout_from_mask(full_map, indices, axis=1), d)\n",
+    "    lambda full_map: get_cutout_from_mask(full_map, indices, axis=1), d\n",
+    ")\n",
     "masked_clusters = jax.tree.map(\n",
     "    lambda full_map: get_cutout_from_mask(full_map, indices).astype(jnp.int32),\n",
-    "    patch_indices)\n",
+    "    patch_indices,\n",
+    ")\n",
     "\n",
     "\n",
     "# Set up subplots\n",
     "fig = plt.figure(figsize=(15, 5))\n",
     "# Plot each map\n",
-    "hp.mollview(temp_dust_patch_indices,\n",
-    "            title='Temperature Dust Patches',\n",
-    "            sub=(1, 3, 1))\n",
-    "hp.mollview(beta_dust_patch_indices, title='Beta Dust Patches', sub=(1, 3, 2))\n",
-    "hp.mollview(beta_pl_patch_indices, title='Beta PL Patches', sub=(1, 3, 3))\n",
+    "hp.mollview(temp_dust_patch_indices, title=\"Temperature Dust Patches\", sub=(1, 3, 1))\n",
+    "hp.mollview(beta_dust_patch_indices, title=\"Beta Dust Patches\", sub=(1, 3, 2))\n",
+    "hp.mollview(beta_pl_patch_indices, title=\"Beta PL Patches\", sub=(1, 3, 3))\n",
     "\n",
     "# Display the plot\n",
     "plt.show()"
@@ -190,16 +196,16 @@
     "dust_nu0 = 150.0\n",
     "synchrotron_nu0 = 20.0\n",
     "\n",
-    "spectral_cmb_variance = partial(spectral_cmb_variance,\n",
-    "                                dust_nu0=dust_nu0,\n",
-    "                                synchrotron_nu0=synchrotron_nu0)\n",
-    "negative_log_likelihood = partial(negative_log_likelihood,\n",
-    "                                  dust_nu0=dust_nu0,\n",
-    "                                  synchrotron_nu0=synchrotron_nu0)\n",
+    "spectral_cmb_variance = partial(\n",
+    "    spectral_cmb_variance, dust_nu0=dust_nu0, synchrotron_nu0=synchrotron_nu0\n",
+    ")\n",
+    "negative_log_likelihood = partial(\n",
+    "    negative_log_likelihood, dust_nu0=dust_nu0, synchrotron_nu0=synchrotron_nu0\n",
+    ")\n",
     "\n",
-    "spectral_log_likelihood = partial(spectral_log_likelihood,\n",
-    "                                    dust_nu0=dust_nu0,\n",
-    "                                    synchrotron_nu0=synchrotron_nu0)\n",
+    "spectral_log_likelihood = partial(\n",
+    "    spectral_log_likelihood, dust_nu0=dust_nu0, synchrotron_nu0=synchrotron_nu0\n",
+    ")\n",
     "\n",
     "\n",
     "N = HomothetyOperator(jnp.ones(1), _in_structure=d.structure)"
@@ -231,35 +237,42 @@
     }
    ],
    "source": [
-    "planck_mask = GAL020  \n",
-    "indices, = jnp.where(planck_mask == 1)\n",
+    "planck_mask = GAL020\n",
+    "(indices,) = jnp.where(planck_mask == 1)\n",
     "max_patches = 300\n",
     "T_d_patches = 150\n",
     "B_d_patches = 100\n",
     "B_s_patches = 50\n",
     "\n",
-    "temp_dust_patch_indices = get_clusters(planck_mask, indices,T_d_patches, jax.random.PRNGKey(0),max_centroids=max_patches)\n",
-    "beta_dust_patch_indices = get_clusters(planck_mask,indices, B_d_patches, jax.random.PRNGKey(0),max_centroids=max_patches)\n",
-    "beta_pl_patch_indices = get_clusters(planck_mask, indices,B_s_patches, jax.random.PRNGKey(0),max_centroids=max_patches)\n",
+    "temp_dust_patch_indices = get_clusters(\n",
+    "    planck_mask, indices, T_d_patches, jax.random.PRNGKey(0), max_centroids=max_patches\n",
+    ")\n",
+    "beta_dust_patch_indices = get_clusters(\n",
+    "    planck_mask, indices, B_d_patches, jax.random.PRNGKey(0), max_centroids=max_patches\n",
+    ")\n",
+    "beta_pl_patch_indices = get_clusters(\n",
+    "    planck_mask, indices, B_s_patches, jax.random.PRNGKey(0), max_centroids=max_patches\n",
+    ")\n",
     "\n",
     "params = {\n",
-    "'temp_dust': jnp.full((max_patches,), 20.0),\n",
-    "'beta_dust': jnp.full((max_patches,), 1.54),\n",
-    "'beta_pl': jnp.full((max_patches,), -3.0),\n",
+    "    \"temp_dust\": jnp.full((max_patches,), 20.0),\n",
+    "    \"beta_dust\": jnp.full((max_patches,), 1.54),\n",
+    "    \"beta_pl\": jnp.full((max_patches,), -3.0),\n",
     "}\n",
     "\n",
     "patch_indices = {\n",
-    "    'temp_dust_patches': temp_dust_patch_indices.astype(jnp.int32),\n",
-    "    'beta_dust_patches': beta_dust_patch_indices.astype(jnp.int32),\n",
-    "    'beta_pl_patches': beta_pl_patch_indices.astype(jnp.int32),\n",
+    "    \"temp_dust_patches\": temp_dust_patch_indices.astype(jnp.int32),\n",
+    "    \"beta_dust_patches\": beta_dust_patch_indices.astype(jnp.int32),\n",
+    "    \"beta_pl_patches\": beta_pl_patch_indices.astype(jnp.int32),\n",
     "}\n",
     "\n",
     "masked_clusters = jax.tree.map(\n",
-    "        lambda full_map: get_cutout_from_mask(full_map, indices).astype(jnp.int32), patch_indices\n",
-    "    )\n",
+    "    lambda full_map: get_cutout_from_mask(full_map, indices).astype(jnp.int32),\n",
+    "    patch_indices,\n",
+    ")\n",
     "\n",
     "N = HomothetyOperator(jnp.ones(1), _in_structure=masked_sky.structure)\n",
-    "negative_log_likelihood(params, nu=nu, d=masked_sky, N=N,patch_indices=masked_clusters)"
+    "negative_log_likelihood(params, nu=nu, d=masked_sky, N=N, patch_indices=masked_clusters)"
    ]
   },
   {
@@ -276,35 +289,60 @@
     "\n",
     "solver = optax.lbfgs()\n",
     "\n",
-    "inverser_options = {'solver': lx.CG(rtol=1e-6 , atol=1e-6, max_steps=100000), 'solver_throw': False}\n",
+    "inverser_options = {\n",
+    "    \"solver\": lx.CG(rtol=1e-6, atol=1e-6, max_steps=100000),\n",
+    "    \"solver_throw\": False,\n",
+    "}\n",
     "\n",
     "\n",
     "(indices,) = jnp.where(GAL020 == 1)\n",
     "\n",
     "masked_sky = jax.tree.map(\n",
-    "    lambda full_map: get_cutout_from_mask(full_map, indices, axis=1), d)\n",
+    "    lambda full_map: get_cutout_from_mask(full_map, indices, axis=1), d\n",
+    ")\n",
     "masked_noise = HomothetyOperator(jnp.ones(1), _in_structure=masked_sky.structure)\n",
     "\n",
     "\n",
     "@partial(jax.jit, static_argnums=(5))\n",
-    "def compute_minimum_variance(T_d_patches, B_d_patches, B_s_patches, planck_mask, indices , max_patches=25):\n",
-    "    temp_dust_patch_indices = get_clusters(planck_mask, indices,T_d_patches, jax.random.PRNGKey(0),max_centroids=max_patches)\n",
-    "    beta_dust_patch_indices = get_clusters(planck_mask,indices, B_d_patches, jax.random.PRNGKey(0),max_centroids=max_patches)\n",
-    "    beta_pl_patch_indices = get_clusters(planck_mask, indices,B_s_patches, jax.random.PRNGKey(0),max_centroids=max_patches)\n",
+    "def compute_minimum_variance(\n",
+    "    T_d_patches, B_d_patches, B_s_patches, planck_mask, indices, max_patches=25\n",
+    "):\n",
+    "    temp_dust_patch_indices = get_clusters(\n",
+    "        planck_mask,\n",
+    "        indices,\n",
+    "        T_d_patches,\n",
+    "        jax.random.PRNGKey(0),\n",
+    "        max_centroids=max_patches,\n",
+    "    )\n",
+    "    beta_dust_patch_indices = get_clusters(\n",
+    "        planck_mask,\n",
+    "        indices,\n",
+    "        B_d_patches,\n",
+    "        jax.random.PRNGKey(0),\n",
+    "        max_centroids=max_patches,\n",
+    "    )\n",
+    "    beta_pl_patch_indices = get_clusters(\n",
+    "        planck_mask,\n",
+    "        indices,\n",
+    "        B_s_patches,\n",
+    "        jax.random.PRNGKey(0),\n",
+    "        max_centroids=max_patches,\n",
+    "    )\n",
     "\n",
     "    params = {\n",
-    "    'temp_dust': jnp.full((max_patches,), 20.0),\n",
-    "    'beta_dust': jnp.full((max_patches,), 1.54),\n",
-    "    'beta_pl': jnp.full((max_patches,), -3.0),\n",
+    "        \"temp_dust\": jnp.full((max_patches,), 20.0),\n",
+    "        \"beta_dust\": jnp.full((max_patches,), 1.54),\n",
+    "        \"beta_pl\": jnp.full((max_patches,), -3.0),\n",
     "    }\n",
     "\n",
     "    patch_indices = {\n",
-    "        'temp_dust_patches': temp_dust_patch_indices,\n",
-    "        'beta_dust_patches': beta_dust_patch_indices,\n",
-    "        'beta_pl_patches': beta_pl_patch_indices,\n",
+    "        \"temp_dust_patches\": temp_dust_patch_indices,\n",
+    "        \"beta_dust_patches\": beta_dust_patch_indices,\n",
+    "        \"beta_pl_patches\": beta_pl_patch_indices,\n",
     "    }\n",
     "    masked_clusters = jax.tree.map(\n",
-    "        lambda full_map: get_cutout_from_mask(full_map, indices).astype(jnp.int32), patch_indices\n",
+    "        lambda full_map: get_cutout_from_mask(full_map, indices).astype(jnp.int32),\n",
+    "        patch_indices,\n",
     "    )\n",
     "\n",
     "    with Config(**inverser_options):\n",
@@ -321,13 +359,14 @@
     "            patch_indices=masked_clusters,\n",
     "        )\n",
     "\n",
+    "    return spectral_cmb_variance(\n",
+    "        final_params, nu=nu, d=masked_sky, N=masked_noise, patch_indices=masked_clusters\n",
+    "    )\n",
     "\n",
-    "    last_L = negative_log_likelihood(final_params, nu=nu, d=masked_sky, N=masked_noise, patch_indices=masked_clusters)\n",
     "\n",
-    "    return spectral_cmb_variance(final_params, nu=nu, d=masked_sky, N=masked_noise, patch_indices=masked_clusters)\n",
-    "\n",
-    "\n",
-    "bad_var = compute_minimum_variance(10, 20, 25, GAL020,indices, max_patches=max_centroids)"
+    "bad_var = compute_minimum_variance(\n",
+    "    10, 20, 25, GAL020, indices, max_patches=max_centroids\n",
+    ")"
    ]
   },
   {
@@ -344,7 +383,14 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "best_var = compute_minimum_variance(temp_dust_patches_count, beta_dust_patches_count, beta_pl_patches_count, GAL020,indices, max_patches=max_centroids)"
+    "best_var = compute_minimum_variance(\n",
+    "    temp_dust_patches_count,\n",
+    "    beta_dust_patches_count,\n",
+    "    beta_pl_patches_count,\n",
+    "    GAL020,\n",
+    "    indices,\n",
+    "    max_patches=max_centroids,\n",
+    ")"
    ]
   },
   {
@@ -387,14 +433,21 @@
     "\n",
     "@jax.jit\n",
     "def objective_function(T_d_patches, B_d_patches, B_s_patches):\n",
-    "    return compute_minum_variance(T_d_patches, B_d_patches, B_s_patches, GAL020,indices, max_patches=max_centroids)\n",
+    "    return compute_minimum_variance(\n",
+    "        T_d_patches,\n",
+    "        B_d_patches,\n",
+    "        B_s_patches,\n",
+    "        GAL020,\n",
+    "        indices,\n",
+    "        max_patches=max_centroids,\n",
+    "    )\n",
     "\n",
     "\n",
     "# Put the good values for the grid search\n",
     "search_space = {\n",
-    "    'T_d_patches': jax.array([50]),\n",
-    "    'B_d_patches': jax.array([1500 , 2000]),\n",
-    "    'B_s_patches': jax.array([50]),\n",
+    "    \"T_d_patches\": jax.array([50]),\n",
+    "    \"B_d_patches\": jax.array([1500, 2000]),\n",
+    "    \"B_s_patches\": jax.array([50]),\n",
     "}\n",
     "\n",
     "grid_search = DistributedGridSearch(\n",
@@ -404,7 +457,7 @@
     "results = grid_search.run()\n",
     "\n",
     "for keys, values in results.items():\n",
-    "    print(f'{keys} : {values[0]}')"
+    "    print(f\"{keys} : {values[0]}\")"
    ]
   },
   {
@@ -426,7 +479,7 @@
    "source": [
     "from jax_grid_search import DistributedGridSearch\n",
     "\n",
-    "results = DistributedGridSearch.stack_results('results')\n",
+    "results = DistributedGridSearch.stack_results(\"results\")\n",
     "results.keys()"
    ]
   },
@@ -452,29 +505,32 @@
     "import jax.numpy as jnp\n",
     "import matplotlib.pyplot as plt\n",
     "\n",
-    "T_d_patches = results['T_d_patches']\n",
-    "B_d_patches = results['B_d_patches']\n",
-    "B_s_patches = results['B_s_patches']\n",
-    "value = results['value']\n",
+    "T_d_patches = results[\"T_d_patches\"]\n",
+    "B_d_patches = results[\"B_d_patches\"]\n",
+    "B_s_patches = results[\"B_s_patches\"]\n",
+    "value = results[\"value\"]\n",
     "\n",
     "unique_T_d_patches = jnp.unique(T_d_patches)\n",
     "unique_B_d_patches = jnp.unique(B_d_patches)\n",
     "\n",
     "plt.figure(figsize=(20, 20))\n",
-    "for T_d_mask , B_d_mask in product(unique_T_d_patches,unique_B_d_patches):\n",
+    "for T_d_mask, B_d_mask in product(unique_T_d_patches, unique_B_d_patches):\n",
+    "    T_d_B_s_mask = (T_d_patches == T_d_mask) & (B_s_patches == B_d_mask)\n",
     "\n",
-    "  T_d_B_s_mask = (T_d_patches == T_d_mask) & (B_s_patches == B_d_mask)\n",
+    "    # Sort and index\n",
+    "    filtered_value = value[T_d_B_s_mask]\n",
+    "    filtered_B_d_patches = B_d_patches[T_d_B_s_mask]\n",
     "\n",
-    "  # Sort and index\n",
-    "  filtered_value = value[T_d_B_s_mask]\n",
-    "  filtered_B_d_patches = B_d_patches[T_d_B_s_mask]\n",
+    "    B_d_sorted_args = jnp.argsort(filtered_B_d_patches)\n",
+    "    filtered_value = filtered_value[B_d_sorted_args]\n",
+    "    filtered_B_d_patches = filtered_B_d_patches[B_d_sorted_args]\n",
     "\n",
-    "  B_d_sorted_args = jnp.argsort(filtered_B_d_patches)\n",
-    "  filtered_value = filtered_value[B_d_sorted_args]\n",
-    "  filtered_B_d_patches = filtered_B_d_patches[B_d_sorted_args]\n",
-    "\n",
-    "  plt.plot(filtered_B_d_patches, filtered_value, label=f'T_d_mask : {T_d_mask} , B_s_mask : {B_d_mask}')\n",
-    "  plt.legend()"
+    "    plt.plot(\n",
+    "        filtered_B_d_patches,\n",
+    "        filtered_value,\n",
+    "        label=f\"T_d_mask : {T_d_mask} , B_s_mask : {B_d_mask}\",\n",
+    "    )\n",
+    "    plt.legend()"
    ]
   }
  ],
